# src/main/java/com/projeto/demo/controllers/TrackController.java
@@ -1,6 +1,5 @@
 package com.projeto.demo.controllers;
 
-import com.projeto.demo.exceptions.UnauthorizedActionException;
 import com.projeto.demo.services.TrackService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -14,19 +13,6 @@ public class TrackController extends BaseController {
     @Autowired
     private TrackService trackService;
 
-    @PostMapping("/")
-    public ResponseEntity<?> createTrack(@RequestBody String trackName) {
-        try {
-            if (!isAdmin()) {
-                throw new UnauthorizedActionException();
-            }
-
-            return ResponseEntity.ok(trackService.createTrack(trackName));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(e.getMessage());
-        }
-    }
-
     @GetMapping("/")
     public ResponseEntity<?> listTracks() {
         try {
@@ -36,26 +22,4 @@ public class TrackController extends BaseController {
         }
     }
 
-    @GetMapping("/{id}")
-    public ResponseEntity<?> findPaymentById(@PathVariable Long id) {
-        try {
-            return ResponseEntity.ok(trackService.findTrackById(id));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(e.getMessage());
-        }
-    }
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<?> deleteTrack(@PathVariable Long id) {
-        try {
-            if (!isAdmin()) {
-                throw new UnauthorizedActionException();
-            }
-
-            trackService.deleteTrack(id);
-            return ResponseEntity.ok().build();
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(e.getMessage());
-        }
-    }
 }
